--- a/src/components/Header/NavBar.scss
+++ b/src/components/Header/NavBar.scss
@@ -1,5 +1,6 @@
 #header {
   background-color: rgb(197, 197, 197);
-  height: 50px;
+  height: 5vh;
   font-size: 40px;
+  border-bottom: 3px solid #282c34;
 }
