--- a/src/components/comments/Comments.scss
+++ b/src/components/comments/Comments.scss
@@ -14,8 +14,9 @@
 }
 
 .CommentFeed {
-  width: 35vw;
-  border: 3px solid #282c34;
+  height: 94vw;
+  width: 25vw;
+  // border: 3px solid #282c34;
 }
 
 // background-color: #282c34;
